Colab을 통해 생성됨

--- a/DART_API_GET_CORP_CODE.ipynb
+++ b/DART_API_GET_CORP_CODE.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPVKpb1pCZGAzysxmf02i9r",
+      "authorship_tag": "ABX9TyNSPLyn0YQkwy/nna+lsW6z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,6 +40,8 @@
         "    corp_code = lists.find('corp_code').text\n",
         "    corp_name = lists.find('corp_name').text\n",
         "    print(f\"{corp_code}, {corp_name}\")\n",
+        "\n",
+        "print(\"TEST\")\n",
         "\n"
       ],
       "metadata": {
